Add form entity module